Add basic links

--- a/web/pug_views/home.pug
+++ b/web/pug_views/home.pug
@@ -3,5 +3,7 @@
 //- file, You can obtain one at https://mozilla.org/MPL/2.0/.
 doctype html
 head
-  h1 Hello World!
-  h3 Basic Page
+  h1 174 Home Network
+  a(href='https://174.zenquah.dev:8443') UniFi Controller
+  hr
+  a(href='https://github.com/Jqnxyz') GitHub
