Add skeleton css

--- a/web/pug_views/home.pug
+++ b/web/pug_views/home.pug
@@ -3,7 +3,15 @@
 //- file, You can obtain one at https://mozilla.org/MPL/2.0/.
 doctype html
 head
-  h1 174 Home Network
-  a(href='https://174.zenquah.dev:8443') UniFi Controller
-  hr
-  a(href='https://github.com/Jqnxyz') GitHub
+  include includes/head.pug
+  title Zen Home
+body
+  div(class="container")
+    div(class="row")
+      div(class="one-half column" style="margin-top: 25%")
+        h1 Home Network
+        h3 Links
+        a(href='https://174.zenquah.dev:8443') UniFi Controller
+        br
+        a(href='https://github.com/Jqnxyz') GitHub
+
