--- a/web/pug_views/home.pug
+++ b/web/pug_views/home.pug
@@ -10,8 +10,9 @@ body
     div(class="row")
       div(class="one-half column" style="margin-top: 25%")
         h1 Home Network
-        h3 Links
-        a(href='https://174.zenquah.dev:8443') UniFi Controller
-        br
-        a(href='https://github.com/Jqnxyz') GitHub
+        div
+          h3 Links
+          a(href='https://174.zenquah.dev:8443') UniFi Controller
+          br
+          a(href='https://github.com/Jqnxyz') GitHub
 
