--- a/web/pug_views/includes/head.pug
+++ b/web/pug_views/includes/head.pug
@@ -2,6 +2,6 @@ meta(charset='utf-8')
 meta(name='description' content='Zen Homepage')
 meta(name='author' content='Zen Quah')
 meta(name='viewport' content='width=device-width, initial-scale=1')
-link(href='https//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css')
+link(href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css')
 link(rel='stylesheet' href='assets/css/normalize.css')
 link(rel='stylesheet' href='assets/css/skeleton.css')
