--- a/web/pug_views/home.pug
+++ b/web/pug_views/home.pug
@@ -4,7 +4,7 @@
 doctype html
 head
   include includes/head.pug
-  title Zen Home
+  title Examples of Recursion
 body
   div(style="width:100vw,height:100vh")
     video(controls loop=true autoplay=true src="https://static.govtech.agency/share/Examples-of-Recursion-gWnNIi.m4v")
