--- a/web/pug_views/includes/head.pug
+++ b/web/pug_views/includes/head.pug
@@ -2,7 +2,6 @@
 //- License, v. 2.0. If a copy of the MPL was not distributed with this
 //- file, You can obtain one at https://mozilla.org/MPL/2.0/.
 meta(charset='utf-8')
-meta(name='description' content='Zen Homepage')
-meta(name='author' content='Zen Quah')
+meta(name='description' content='Examples of Recursion')
+meta(name='author' content='Examples of Recursion')
 meta(name='viewport' content='width=device-width, initial-scale=1')
-link(href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css')
