--- a/web/pug_views/home.pug
+++ b/web/pug_views/home.pug
@@ -7,5 +7,5 @@ head
   title Examples of Recursion
 body
   div(style="width:100%; height:100%; top:0; bottom:0; overflow: hidden; position: absolute;")
-    video(controls loop=true autoplay=true src="https://static.govtech.agency/share/Examples-of-Recursion-gWnNIi.m4v" style="min-width: 100%; min-height: 100%; width: auto; height: auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);")
+    video(controls loop=true autoplay=true src="https://static.govtech.agency/share/Examples-of-Recursion-gWnNIi.m4v" style="min-width: 100%; min-height: 100%; width: 100%; height: auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);")
 
